# fuel_optimization

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fuel-prices-for-be-assessment.csv  pyproject.toml
apps/fuel/: apps.py  models.py  serializers.py  urls.py  views.py
apps/fuel/management/commands/: import_fuel_stations.py
apps/fuel/migrations/: 0001_initial.py  0002_routecache_updated_at.py
apps/fuel/services/: geocoder.py  routing_service.py
apps/fuel/utils/: normalizer.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  developement.py  production.py  settings.py
